--- a/src/app/pages/school/results/register-results/register-results.component.html
+++ b/src/app/pages/school/results/register-results/register-results.component.html
@@ -99,7 +99,7 @@
 
             <div class="modal-footer">
                 <div class="hstack gap-2 justify-content-end">
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="dismissModal()"><i class="ri-check-line align-bottom me-1"></i> Done</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="dismissModal()">Done</button>
                 </div>
             </div>
         </ng-template>
