--- a/src/app/pages/school/results/register-results/register-results.component.html
+++ b/src/app/pages/school/results/register-results/register-results.component.html
@@ -15,14 +15,14 @@
                         <div class="d-flex flex-wrap align-items-start gap-2">
                              <!-- <button type="button" class="btn btn-success" (click)="openModal(importResultsContent)"><i
                                     class="ri-file-excel-2-line align-bottom me-1"></i> Download</button> -->
-                            <button type="button" class="btn btn-success" (click)="openModal(importResultsContent)"><i
+                            <button type="button" class="btn btn-success" (click)="openModal(importResultsContent)" [disabled]="isActionButtonDisabled()"><i
                                     class="ri-file-excel-2-line align-bottom me-1"></i> Import</button>
                             <button type="button" class="btn btn-secondary" (click)="openModal(scaleContent)"><i
                                     class="ri-scales-line align-bottom me-1"></i> Grading Scale</button>
-                            <button type="button" class="btn btn-danger" (click)="deleteResults()"><i
-                                    class="ri-delete-bin-line align-bottom me-1"></i> Delete</button>
-                            <button type="button" class="btn btn-info" (click)="saveResults()"><i
-                                    class="ri-save-2-line align-bottom me-1"></i> Save</button>
+                            <button type="button" class="btn btn-info" (click)="saveResults()" [disabled]="isActionButtonDisabled()"><i
+                                    class="ri-save-2-line align-bottom me-1"></i> Save Results</button>
+                            <button type="button" class="btn btn-danger" (click)="deleteResults()" [disabled]="isActionButtonDisabled()"><i
+                                    class="ri-delete-bin-line align-bottom me-1"></i> Delete Results</button>
                         </div>
                     </div>
                     <div class="col-xl-12 ">
@@ -32,19 +32,19 @@
                                 <div class="row g-3">
                                     <div class="col-xxl-2 col-lg-4">
                                         <ng-select [items]="teacherClasses" formControlName="classId" bindLabel="name"
-                                            bindValue="id" placeholder="Select Class"></ng-select>
+                                            bindValue="id" placeholder="Class"></ng-select>
                                     </div>
                                     <div class="col-xxl-2 col-lg-4">
                                         <ng-select [items]="teacherSections" formControlName="classSectionId"
-                                            bindLabel="name" bindValue="id" placeholder="Select Section"></ng-select>
+                                            bindLabel="name" bindValue="id" placeholder="Section"></ng-select>
                                     </div>
                                     <div class="col-xxl-4 col-lg-6">
                                         <ng-select [items]="teacherSubjects" formControlName="subjectId"
-                                            bindLabel="name" bindValue="id" placeholder="Select subject"></ng-select>
+                                            bindLabel="name" bindValue="id" placeholder="Subject"></ng-select>
                                     </div>
                                     <div class="col-xxl-3 col-lg-6">
                                         <ng-select [items]="examTypes" formControlName="examTypeId" bindLabel="name"
-                                            bindValue="examTypeId" placeholder="Select exam type"></ng-select>
+                                            bindValue="examTypeId" placeholder="Exam Type"></ng-select>
                                     </div>
                                     <div class="col-xxl-1 col-lg-4">
                                         <button type="button" class="btn btn-primary w-100" type="submit"><i
