feat: Add title attribute to WhatsApp sign-in button for improved accessibility

--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -109,9 +109,9 @@
                                             <h5 class="fs-13 mb-4 title">Sign In with</h5>
                                         </div>
                                         <div class="d-flex gap-2 justify-content-center">
-                                            <button type="button"
-                                                class="btn btn-success  btn-icon waves-effect waves-light"><i
-                                                    class="ri-whatsapp-fill fs-16"></i></button>
+                                            <button type="button" class="btn btn-success  btn-icon waves-effect waves-light" title="WhatsApp">
+                                                <i class="ri-whatsapp-fill fs-16" ></i>
+                                            </button>
                                         </div>
                                     </div>
                                 </form>
