--- a/src/app/pages/school/results/register-results/register-results.component.html
+++ b/src/app/pages/school/results/register-results/register-results.component.html
@@ -7,7 +7,7 @@
                     <div class="col-sm">
                         <div>
                             <h5 class="card-title mb-0"><i
-                                    class="ri-pencil-ruler-line text-muted fs-18 align-middle me-1"> </i>Register
+                                    class="ri-pencil-ruler-line text-muted fs-18 align-middle me-1"> </i>Record
                                 Results</h5>
                         </div>
                     </div>
