move opt login from modal to the normal UI

--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -35,7 +35,7 @@
                                 <p class="text-muted">Sign in to continue</p>
                             </div>
                             <div class="p-2 mt-4">
-                                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" *ngIf="!isWhatsAppLoginMode">
                                     <div class="mb-3">
                                         <label class="form-label">Country</label>
                                         <ng-select appearance="outline" [searchable]="true" [clearable]="false" placeholder="Country" (change)="onCountrySelected($event)"
@@ -91,27 +91,32 @@
                                     </div>
 
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value=""
-                                            id="auth-remember-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="auth-remember-check">
                                         <label class="form-check-label" for="auth-remember-check">Remember me</label>
                                     </div>
 
                                     <div class="mt-4">
-                                        <button class="btn btn-primary w-100" type="submit" [disabled]="loading">Sign
-                                            In</button>
-                                    </div>
-
-                                    <div class="mt-4 text-center">
-                                        <div class="signin-other-title">
-                                            <h5 class="fs-13 mb-4 title">Sign In with</h5>
-                                        </div>
-                                        <div class="d-flex gap-2 justify-content-center">
-                                            <button type="button" class="btn btn-success  btn-icon waves-effect waves-light" title="WhatsApp" (click)="whatsAppLogin(whatsAppLoginContent)">
-                                                <i class="ri-whatsapp-fill fs-16" ></i>
-                                            </button>
-                                        </div>
+                                        <button class="btn btn-primary w-100" type="submit" [disabled]="loading">Sign In</button>
                                     </div>
                                 </form>
+
+                                <div id="otpless-login-page" *ngIf="isWhatsAppLoginMode"></div>
+
+                                <div class="mt-4 text-center">
+                                    <div class="signin-other-title">
+                                        <h5 class="fs-13 mb-4 title">Sign In with</h5>
+                                    </div>
+                                    <div class="d-flex gap-2 justify-content-center" *ngIf="!isWhatsAppLoginMode">
+                                        <button type="button" class="btn btn-success  btn-icon waves-effect waves-light" title="WhatsApp" (click)="toggleWhatsAppLogin()">
+                                            <i class="ri-whatsapp-fill fs-20" ></i>
+                                        </button>
+                                    </div>
+                                     <div class="d-flex gap-2 justify-content-center" *ngIf="isWhatsAppLoginMode">
+                                        <button type="button" class="btn btn-primary btn-icon waves-effect waves-light" title="WhatsApp" (click)="toggleWhatsAppLogin()">
+                                            <i class="ri-key-2-fill fs-20" ></i>
+                                        </button>
+                                    </div>
+                                </div>
                                 <div id="elmLoader" *ngIf="loading">
                                     <div class="spinner-border text-primary avatar-sm" role="status">
                                         <span class="visually-hidden">Loading...</span>
@@ -122,8 +127,7 @@
                     </div>
 
                     <div class="mt-4 text-center">
-                        <p class="mb-0">Don't have an account ? <a routerLink="/auth/register"
-                                class="fw-semibold text-primary text-decoration-underline"> Signup </a> </p>
+                        <p class="mb-0">Don't have an account ? <a routerLink="/auth/register" class="fw-semibold text-primary text-decoration-underline"> Signup </a> </p>
                     </div>
 
                 </div>
@@ -218,10 +222,3 @@
     </div>
 </ng-template>
 
-
-<ng-template #whatsAppLoginContent role="document" let-modal>
-    <div class="modal-header p-3">
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
-    </div>
-    <div id="otpless-login-page" style="border-style: none !important;"></div>
-</ng-template>
