--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -112,7 +112,7 @@
                                         </button>
                                     </div>
                                      <div class="d-flex gap-2 justify-content-center" *ngIf="isWhatsAppLoginMode">
-                                        <button type="button" class="btn btn-primary btn-icon waves-effect waves-light" title="WhatsApp" (click)="toggleWhatsAppLogin()">
+                                        <button type="button" class="btn btn-primary btn-icon waves-effect waves-light" title="Password" (click)="toggleWhatsAppLogin()">
                                             <i class="ri-key-2-fill fs-20" ></i>
                                         </button>
                                     </div>
