fix issue with modal open

--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -155,7 +155,7 @@
 </div>
 <ng-template #selectInstitutionContent role="document" let-modal>
     <div class="modal-header p-3 bg-primary-subtle">
-        <h5 class="modal-title" id="modalLabel1">Select Institution</h5>
+        <h5 class="modal-title" id="modalLabel1">Institutions</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal"
             (click)="closeSelectInstitutionModal()"></button>
     </div>
@@ -179,7 +179,7 @@
 
 <ng-template #selectAppContent role="document" let-modal>
     <div class="modal-header p-3 bg-primary-subtle">
-        <h5 class="modal-title" id="modalLabel2">Select Application</h5>
+        <h5 class="modal-title" id="modalLabel2">Applications</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal"
             (click)="closeSelectApplicationModal()"></button>
     </div>
