--- a/src/app/pages/school/reporting/master-sheets/master-sheets.component.html
+++ b/src/app/pages/school/reporting/master-sheets/master-sheets.component.html
@@ -1,1 +1,50 @@
 <app-breadcrumbs title="REPORTING" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
+<div class="row">
+    <div class="col-lg-12">
+        <div class="card">
+            <div class="card-header border-bottom-dashed">
+                <div class="row g-4 align-items-center">
+                    <div class="col-sm">
+                        <div>
+                            <h5 class="card-title mb-0"><i class="ri-survey-line text-muted fs-18 align-middle me-1"> </i>Master Sheets</h5>
+                        </div>
+                    </div>
+                    <div class="col-sm-auto">
+                        <div class="d-flex flex-wrap align-items-start gap-2">
+                            <!-- <button type="button" class="btn btn-success"  ><i
+                                    class="ri-file-excel-2-line align-bottom me-1"></i> Excel</button> -->
+                  
+                        </div>
+                    </div>
+                    <div class="col-xl-12 ">
+                        <div class="card-body">
+                            <form class="tablelist-form" autocomplete="off" [formGroup]="getMasterSheetForm"
+                                (ngSubmit)="getMasterSheets()">
+                                <div class="row g-3">
+                                    <div class="col-xxl-3 col-lg-6">
+                                        <ng-select [items]="classes" formControlName="classIds" bindLabel="name"
+                                            bindValue="id" placeholder="Class"></ng-select>
+                                    </div>
+                                    <div class="col-xxl-3 col-lg-6">
+                                        <ng-select [items]="classSections" formControlName="classSectionIds"
+                                            bindLabel="name" bindValue="id" placeholder="Section"></ng-select>
+                                    </div>
+                                    <div class="col-xxl-3 col-lg-6">
+                                        <ng-select [items]="academicPeriods" formControlName="academicPeriodId"
+                                            bindLabel="name" bindValue="id" placeholder="Academic Period"></ng-select>
+                                    </div>
+                                    <div class="col-xxl-3 col-lg-6">
+                                        <button type="button" class="btn btn-primary w-100" type="submit"><i
+                                                class="ri-equalizer-fill mx-2"></i>Load</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <app-loading [loading]="loading"></app-loading>
+
+    </div>
