--- a/src/app/pages/school/reporting/master-sheets/master-sheets.component.html
+++ b/src/app/pages/school/reporting/master-sheets/master-sheets.component.html
@@ -22,11 +22,11 @@
                                 (ngSubmit)="getMasterSheets()">
                                 <div class="row g-3">
                                     <div class="col-xxl-3 col-lg-6">
-                                        <ng-select [items]="classes" formControlName="classIds" bindLabel="name"
+                                        <ng-select [items]="classes" formControlName="classIds" bindLabel="name" multiple="true"
                                             bindValue="id" placeholder="Class"></ng-select>
                                     </div>
                                     <div class="col-xxl-3 col-lg-6">
-                                        <ng-select [items]="classSections" formControlName="classSectionIds"
+                                        <ng-select [items]="classSections" formControlName="classSectionIds" multiple="true"
                                             bindLabel="name" bindValue="id" placeholder="Section"></ng-select>
                                     </div>
                                     <div class="col-xxl-3 col-lg-6">
