--- a/src/app/pages/school/reporting/report-cards/report-cards.component.html
+++ b/src/app/pages/school/reporting/report-cards/report-cards.component.html
@@ -18,15 +18,14 @@
                     </div>
                     <div class="col-xl-12 ">
                         <div class="card-body">
-                            <form class="tablelist-form" autocomplete="off" [formGroup]="getReportCardForm"
-                                (ngSubmit)="getReportCards()">
+                            <form class="tablelist-form" autocomplete="off" [formGroup]="getReportCardForm" (ngSubmit)="getReportCards()">
                                 <div class="row g-3">
                                     <div class="col-xxl-3 col-lg-6">
-                                        <ng-select [items]="classes" formControlName="classIds" bindLabel="name"
+                                        <ng-select [items]="classes" formControlName="classId" bindLabel="name"
                                             bindValue="id" placeholder="Class"></ng-select>
                                     </div>
                                     <div class="col-xxl-3 col-lg-6">
-                                        <ng-select [items]="classSections" formControlName="classSectionIds"
+                                        <ng-select [items]="classSections" formControlName="classSectionId"
                                             bindLabel="name" bindValue="id" placeholder="Section"></ng-select>
                                     </div>
                                     <div class="col-xxl-3 col-lg-6">
