--- a/src/app/shared/generic-paginated-app-table/generic-paginated-app-table.component.html
+++ b/src/app/shared/generic-paginated-app-table/generic-paginated-app-table.component.html
@@ -2,7 +2,7 @@
     <div class="row g-3">
         <div class="col-xxl-12 col-sm-12">
             <div class="search-box">
-                <input type="text" [(ngModel)]="searchTerm" (ngModelChange)="onSearchChange()" 
+                <input type="text" [(ngModel)]="searchTerm" (ngModelChange)="onSearchInputChange()" 
                        placeholder="Search..." class="form-control search bg-light border-light"/>
                 <i class="ri-search-line search-icon"></i>
             </div>
