--- a/src/app/pages/school/reporting/master-sheets/master-sheets.component.html
+++ b/src/app/pages/school/reporting/master-sheets/master-sheets.component.html
@@ -35,7 +35,7 @@
                                     </div>
                                     <div class="col-xxl-3 col-lg-6">
                                         <button type="button" class="btn btn-primary w-100" type="submit"><i
-                                                class="ri-equalizer-fill mx-2"></i>Load</button>
+                                                class="ri-file-pdf-line mx-2"></i>Generate</button>
                                     </div>
                                 </div>
                             </form>
