--- a/src/app/pages/school/configuration/exam-types/exam-types.component.html
+++ b/src/app/pages/school/configuration/exam-types/exam-types.component.html
@@ -26,7 +26,7 @@
             </generic-app-table>
 
                 <ng-template #useWeightTemplate let-status let-row="row">
-                        <span>{{ getUseWeightLabel(status) }}</span>
+                        <span>{{ getYesOrNoLabel(status) }}</span>
                 </ng-template>
 
                 <ng-template #academicTermTemplate let-academicTermId let-row="row">
