--- a/src/app/pages/school/configuration/academics/rollover/rollover.component.html
+++ b/src/app/pages/school/configuration/academics/rollover/rollover.component.html
@@ -39,10 +39,11 @@
             </div>
             <div class="modal-footer">
                 <div class="hstack gap-2 justify-content-end">
-                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()">Close</button>
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()"><i class="ri-close-circle-line align-bottom me-1"></i> Close</button>
                     <button type="submit" class="btn btn-danger" id="add-btn"><i class="ri-alert-line align-bottom me-1"></i> Rollover</button>
                 </div>
             </div>
         </form>
     </ng-template>
 </div>
+
