--- a/src/app/pages/school/configuration/academics/rollover/rollover.component.html
+++ b/src/app/pages/school/configuration/academics/rollover/rollover.component.html
@@ -21,19 +21,19 @@
 
     <ng-template #content role="document" let-modal>
         <div class="modal-header p-3 bg-light">
-            <h5 class="modal-title" id="modalLabel">Rollover Details</h5>
+            <h5 class="modal-title" id="modalLabel">Rollover</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
         </div>
         <form  class="tablelist-form" autocomplete="off" [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="modal-body">
                 <div class="mb-3">
-                    <label class="form-label">Academic Year From<span class="text-danger">*</span></label>
-                    <ng-select [items]="academicYears" bindLabel="name" id="academicYear" bindValue="id" required formControlName="academicYearIdFrom" placeholder="Select Academic Year From" [ngClass]="{ 'is-invalid': submitted && form.controls['academicYearIdFrom'].invalid }"></ng-select>
+                    <label class="form-label">Source Academic Year<span class="text-danger">*</span></label>
+                    <ng-select [items]="academicYears" bindLabel="name" id="academicYear" bindValue="id" required formControlName="sourceAcademicYearId" placeholder="Select Source Academic Year" [ngClass]="{ 'is-invalid': submitted && form.controls['sourceAcademicYearId'].invalid }"></ng-select>
                     <div class="invalid-feedback">Please select an academic year from</div>
                 </div>
                  <div class="mb-3">
-                    <label class="form-label">Academic Year To<span class="text-danger">*</span></label>
-                    <ng-select [items]="academicYears" bindLabel="name" id="academicYear" bindValue="id" required formControlName="academicYearIdTo" placeholder="Select Academic Year To" [ngClass]="{ 'is-invalid': submitted && form.controls['academicYearIdTo'].invalid }"></ng-select>
+                    <label class="form-label">Destination Academic Year<span class="text-danger">*</span></label>
+                    <ng-select [items]="academicYears" bindLabel="name" id="academicYear" bindValue="id" required formControlName="destinationAcademicYearId" placeholder="Select Destination Academic Year" [ngClass]="{ 'is-invalid': submitted && form.controls['destinationAcademicYearId'].invalid }"></ng-select>
                     <div class="invalid-feedback">Please select an academic year to</div>
                 </div>
             </div>
