change report generation icon

--- a/src/app/pages/school/reporting/report-cards/report-cards.component.html
+++ b/src/app/pages/school/reporting/report-cards/report-cards.component.html
@@ -31,7 +31,7 @@
                                     </div>
                                     <div class="col-xxl-3 col-lg-6">
                                         <button [disabled]="!isFormValid" type="button" class="btn btn-primary w-100" type="submit"><i
-                                                class="ri-file-pdf-line mx-2"></i> Generate</button>
+                                                class="ri-settings-4-fill mx-2"></i> Generate</button>
                                     </div>
                                 </div>
                             </form>
