change rollover icon

--- a/src/app/pages/school/configuration/academics/rollover/rollover.component.html
+++ b/src/app/pages/school/configuration/academics/rollover/rollover.component.html
@@ -9,7 +9,7 @@
                     </div>
                     <div class="col-sm-auto">
                         <div class="d-flex flex-wrap align-items-start gap-2">
-                            <button type="button" class="btn btn-warning" data-bs-toggle="modal" id="create-btn" data-bs-target="#showModal" (click)="openModal(content)"><i class="ri-alert-line align-bottom me-1"></i> Academic Year Rollover</button>
+                            <button type="button" class="btn btn-warning" data-bs-toggle="modal" id="create-btn" data-bs-target="#showModal" (click)="openModal(content)"><i class="ri-refresh-line align-bottom me-1"></i> Academic Year Rollover</button>
                         </div>
                     </div>
                     <div class="col-sm-auto">
@@ -45,7 +45,7 @@
             <div class="modal-footer">
                 <div class="hstack gap-2 justify-content-end">
                     <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()"><i class="ri-close-circle-line align-bottom me-1"></i> Close</button>
-                    <button type="submit" class="btn btn-danger" id="add-btn"><i class="ri-alert-line align-bottom me-1"></i> Rollover</button>
+                    <button type="submit" class="btn btn-warning" id="add-btn"><i class="ri-refresh-line align-bottom me-1"></i> Rollover</button>
                 </div>
             </div>
         </form>
