--- a/src/app/pages/school/reporting/report-cards/report-cards.component.html
+++ b/src/app/pages/school/reporting/report-cards/report-cards.component.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
         </div>
-
+<button (click)="generatePdf()">Generate PDF</button>
         <app-loading [loading]="loading"></app-loading>
 
     </div>
